--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -46,5 +46,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\GameSession.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Images\Locations\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
