--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -46,8 +46,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\GameSession.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Images\Locations\" />
+    <Resource Include="Images\Locations\FarmFields.png" />
+    <Resource Include="Images\Locations\Farmhouse.png" />
+    <Resource Include="Images\Locations\HerbalistsGarden.png" />
+    <Resource Include="Images\Locations\HerbalistsHut.png" />
+    <Resource Include="Images\Locations\Home.png" />
+    <Resource Include="Images\Locations\SpiderForest.png" />
+    <Resource Include="Images\Locations\TownGate.png" />
+    <Resource Include="Images\Locations\TownSquare.png" />
+    <Resource Include="Images\Locations\Trader.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
